--- a/client/src/index.css
+++ b/client/src/index.css
@@ -191,7 +191,7 @@ footer {
     margin-bottom: 4rem;
 }
 
-.footer__categories a{
+.footer__categories a {
     background: var(--color-gray-700);
     color: var(--color-white);
     padding: 0.6rem 1.4rem;
@@ -227,11 +227,12 @@ footer {
 /*---------Posts----------------*/
 .posts__container,
 .author-post__container,
-.category-posts__container  {
+.category-posts__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 4rem;
 }
+
 .post {
     background: var(--color-white);
     padding: 1rem;
@@ -240,31 +241,38 @@ footer {
     transition: var(--transition);
     cursor: default;
 }
+
 .post:hover {
     box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.1)
 }
+
 .post__thumbnail {
     border-radius: var(--radius-3);
     overflow: hidden;
     height: 16rem;
 }
+
 .post__content {
     margin-top: 1.5rem;
 }
+
 .post__content h3 {
     margin: 1rem 0 0.6rem;
 }
+
 .post__footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     margin-top: 2rem;
 }
+
 .post__author {
     display: flex;
     gap: 1rem;
     align-items: flex-start;
 }
+
 .post__author-avatar {
     width: 2.5rem;
     aspect-ratio: 1/1;
@@ -279,22 +287,26 @@ footer {
     margin-inline: auto;
     padding: 2rem 0;
 }
+
 .post-detail__header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.5rem;
 }
+
 .post-detail__buttons {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
+
 .post-detai__thumbnail {
     margin: 1rem 0;
     height: fit-content;
     max-height: 30rem;
     overflow: hidden;
 }
+
 .post-detail p {
     margin-bottom: 0.7rem;
 }
@@ -305,12 +317,16 @@ footer {
     flex-direction: column;
     gap: 0.8rem
 }
-input, select, textarea {
+
+input,
+select,
+textarea {
     width: 100%;
     padding: 0.6rem 1rem;
     border-radius: var(--radius-1);
     resize: none;
 }
+
 .form__error-message {
     background: var(--color-red);
     color: var(--color-white);
@@ -320,6 +336,7 @@ input, select, textarea {
     display: block;
     margin-bottom: 1rem;
 }
+
 .register,
 .login,
 .create-post {
@@ -329,19 +346,29 @@ input, select, textarea {
     display: grid;
     place-items: center;
 }
+
 .register h2,
 .login h2,
-.create-post h2{
+.create-post h2 {
     margin-bottom: 2rem;
 }
+
 .register small,
 .login small {
     display: block;
     margin-top: 1.5rem;
 }
+
 .register small a,
-.login small a{
+.login small a {
     color: var(--color-primary);
+}
+
+/* Custom style for quill */
+.ql-editor {
+    overflow: scroll;
+    background: var(--color-white);
+    height: 10rem;
 }
 
 /*--------- Authors ----------------*/
@@ -350,6 +377,7 @@ input, select, textarea {
     grid-template-columns: repeat(4, 1fr);
     gap: 3rem;
 }
+
 .author {
     background: var(--color-white);
     padding: 1rem;
@@ -358,9 +386,11 @@ input, select, textarea {
     gap: 1rem;
     transition: var(--transition);
 }
+
 .author:hover {
-    box-shadow: 0 1rem 1.5rem rgba(0, 0, 0 , 0.07);
+    box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.07);
 }
+
 .author__avatar {
     width: 5rem;
     aspect-ratio: 1/1;
@@ -368,7 +398,8 @@ input, select, textarea {
     border: 0.3rem solid var(--color-bg);
     overflow: hidden;
 }
-.author__info p{
+
+.author__info p {
     margin-top: 1rem;
 }
 
@@ -378,9 +409,11 @@ input, select, textarea {
     place-items: center;
     text-align: center;
 }
+
 .profile__details {
     width: 100%
 }
+
 .avatar__wrapper {
     width: 15rem;
     aspect-ratio: 1/1;
@@ -388,18 +421,22 @@ input, select, textarea {
     margin-inline: auto;
     margin-top: 1rem;
 }
+
 .profile__avatar {
     height: 100%;
     border-radius: 50%;
     border: 1rem solid var(--color-red);
     overflow: hidden;
 }
+
 .avatar__form {
     height: 1rem;
 }
+
 .avatar__form input {
     visibility: hidden;
 }
+
 .avatar__form label,
 .profile__avatar-btn {
     background: var(--color-gray-900);
@@ -414,15 +451,18 @@ input, select, textarea {
     place-items: center;
     border-radius: 50%;
 }
+
 .profile__avatar-btn {
     cursor: pointer;
     padding: 0;
     /* font-size: 1.3rem; */
     background: var(--color-primary);
 }
+
 .profile__details h1 {
-    margin-top: 1,5rem;
+    margin-top: 1, 5rem;
 }
+
 .form.profile__form {
     margin-top: 3rem;
     margin-inline: auto;
@@ -435,6 +475,7 @@ input, select, textarea {
     flex-direction: column;
     gap: 0.7rem;
 }
+
 .dashboard__post {
     display: flex;
     align-items: center;
@@ -444,18 +485,152 @@ input, select, textarea {
     padding: 0.5rem 1.2rem;
     border-radius: var(--radius-3);
 }
+
 .dashboard__post-info {
     display: flex;
     gap: 2rem;
     width: 100%;
     align-items: center;
 }
+
 .dashboard__post-thumbnail {
     width: 4rem;
     border-radius: var(--radius-1);
     overflow: hidden;
 }
+
 .dashboard__post-actions {
     display: flex;
     gap: 1rem;
+}
+
+/*========= LOADER +===========================*/
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    place-items: center;
+    /* background: var(--color-bg); */
+    background: rgba(255, 255, 255, 0.8); /* A semi-transparent white background */
+
+}
+.loader__image {
+    width: 4.5rem;
+    aspect-ratio: 1/1;
+}
+
+
+
+
+/*================= Media Queries (smal devices) ============== */
+@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.6rem;
+    }
+
+    h3 {
+        font-size: 1.35rem;
+    }
+
+    .container {
+        width: var(--conatiner-width-md);
+    }
+
+    /* Navbar */
+    .nav__container {
+        position: relative;
+    }
+
+    .nav__menu {
+        position: absolute;
+        top: 5rem;
+        right: 0;
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .nav__menu li {
+        width: 100%;
+        box-shadow: -2rem 4rem 4rem rgba(0, 0, 0, 0.26);
+        animation: dropDown 500ms ease forwards;
+        opacity: 0;
+        transform: rotateX(90deg);
+        transform-origin: top;
+    }
+
+    @keyframes dropDown {
+        to {
+            opacity: 1;
+            transform: rotateX(0);
+        }
+    }
+
+    .nav__menu li:nth-child(2) {
+        animation-delay: 300ms;
+    }
+
+    .nav__menu li:nth-child(3) {
+        animation-delay: 600ms;
+    }
+
+    .nav__menu li:nth-child(4) {
+        animation-delay: 900ms;
+    }
+
+
+
+    .nav__menu li a {
+        display: block;
+        background: var(--color-white);
+        padding: 0.85rem 2.5rem;
+    }
+
+    .nav__toggle-btn {
+        display: inline-block;
+        background: transparent;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    .posts__container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+    .footer__categories {
+        flex-direction: column;
+    }
+    .post-detail {
+        width: 100%;
+        background: transparent;
+        padding: 0;
+    }
+    .register,
+    .login,
+    .create-post {
+        width: 100%;
+    }
+    .form.profile__form {
+        margin-top: 2.5rem;
+        width: 100%
+    }
+    .authors__container {
+        grid-template-columns: 1fr;
+        gap: 1.2rem;
+    }
+    .dashboard__post {
+        flex-direction: column;
+    }
+    .dashboard__post-info {
+        gap: 1.5rem;
+    }
+    .dashboard__post-thumbnail {
+        width: 5rem;
+    }
+
 }
